Fix too long lines

--- a/apps/collection-editor-frontend/src/app/modules/editor/table-edit/table-edit.component.scss
+++ b/apps/collection-editor-frontend/src/app/modules/editor/table-edit/table-edit.component.scss
@@ -71,6 +71,7 @@ th.mat-header-cell {
   min-width: 100px;
   max-width: 100px;
   padding: 0 10px;
+  word-break: break-all;
 }
 
 .input-filter {
